[gd_scene load_steps=9 format=3 uid="uid://dkvup5cg1gfm6"]

[ext_resource type="Texture2D" uid="uid://k02j37cmj8lf" path="res://icon.svg" id="1_m6vlh"]
[ext_resource type="Script" path="res://EnemyScenes/base_enemy.gd" id="1_ylkj4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ynqm3"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ykwv8"]
radius = 50.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gito"]
bg_color = Color(0.6, 0.6, 0.6, 0.235294)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdx3t"]
bg_color = Color(0.607843, 0.560784, 0, 1)
border_width_right = 10
border_color = Color(0.6, 0.6, 0.6, 0.235294)
border_blend = true
corner_radius_top_left = 3
corner_radius_bottom_left = 3
anti_aliasing_size = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_st4gf"]
radius = 800.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8arfb"]
radius = 100.0

[node name="Enemy" type="RigidBody2D" groups=["enemy"]]
collision_layer = 7
collision_mask = 7
mass = 5.0
lock_rotation = true
linear_damp = 2.0
script = ExtResource("1_ylkj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ynqm3")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.955793, 0.732945, 0.196415, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_m6vlh")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
simplify_path = true
simplify_epsilon = 20.0
avoidance_enabled = true
radius = 30.0

[node name="MouseDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetection"]
visible = false
shape = SubResource("CircleShape2D_ykwv8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = -46.0
offset_top = -61.0
offset_right = 46.0
offset_bottom = -44.0
theme_override_styles/background = SubResource("StyleBoxFlat_0gito")
theme_override_styles/fill = SubResource("StyleBoxFlat_bdx3t")
value = 50.0
show_percentage = false

[node name="DetectRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRange"]
visible = false
shape = SubResource("CircleShape2D_st4gf")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_8arfb")

[node name="Label" type="Label" parent="."]
offset_left = -33.0
offset_top = -58.0
offset_right = 7.0
offset_bottom = -35.0

[connection signal="mouse_shape_entered" from="MouseDetection" to="." method="_on_mouse_detection_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="MouseDetection" to="." method="_on_mouse_detection_mouse_shape_exited"]
[connection signal="body_entered" from="DetectRange" to="." method="_on_detect_range_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
